# oauth-mcpserver-poc

./: .env.example  .gitignore  CHANGELOG_ESTADO_OAUTH.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
src/mcp_server/: __init__.py  config.py  main.py  server.py
src/mcp_server/auth/: __init__.py  context.py  jwt_validator.py  middleware.py  protected_resource.py  token_verifier.py
src/mcp_server/http_client/: __init__.py  otus_client.py
src/mcp_server/oauth/: __init__.py  client_registration.py  pkce.py  proxy.py  routes.py  state.py
src/mcp_server/tools/: __init__.py  otus_teams.py
